--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a {
 .header-text {
     font-size: 24px;
     color: #F9FAF8;
-    margin-left: 100px;
+    margin-left: 15%;
 }
 
 .header-links {
@@ -41,7 +41,7 @@ a {
     gap: 10px;
     font-size: 18px;
     color: #E5E7EB;
-    margin-right: 100px;
+    margin-right: 15%;
 }
 
 .header,
@@ -58,3 +58,42 @@ a {
     flex: 1;
 }
 
+.section.one {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px 0;
+}
+
+.web-description {
+    margin-left: 15%;
+    width: 450px;
+}
+
+.web-image {
+    margin-right: 15%;
+    height: 300px;
+    object-fit: cover;
+    flex-grow: 1;
+}
+
+.web-title {
+    margin: 0;
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 700;
+}
+
+.web-text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero-sign {
+    background-color: #3882f6;
+    border: none;
+    color: white;
+    font-size: 18px;
+    padding: 10px 30px;
+    border-radius: 10px;
+}
