Fix font color for information section

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ a {
 .section-two-text {
     text-align: center;
     font-size: 36px;
+    color: #1f2937;
     font-weight: 700;
     font-style: normal;
     margin: 60px;
